
PIG-2966: Test failures on CentOS 6 because MALLOC_ARENA_MAX is not set (cheolsoo via sms)

PIG-2794: Pig test: add utils to simplify testing on Windows (jgordon via gates)

PIG-2910: Add function to read schema from outout of Schema.toString() (initialcontext via thejas)

OPTIMIZATIONS

PIG-3013: BinInterSedes improve chararray sort performance (rohini)

BUG FIXES

PIG-3081: Pig progress stays at 0% for the first job in hadoop 23 (rohini)

PIG-3150: e2e Scripting_5 fails in trunk (dreambird via cheolsoo)

PIG-3153: TestScriptUDF.testJavascriptExampleScript fails in trunk (cheolsoo)

PIG-3145: Parameters in core-site.xml and mapred-site.xml are not correctly substituted (cheolsoo)

PIG-3135: HExecutionEngine should look for resources in user passed Properties (prkommireddi via cheolsoo)

PIG-3200: MiniCluster should delete hadoop-site.xml on shutDown (prkommireddi via cheolsoo)

PIG-3158: Errors in the document "Control Structures" (miyakawataku via cheolsoo)

PIG-3161: Update reserved keywords in Pig docs (russell.jurney via cheolsoo)

PIG-3156: TestSchemaTuple fails in trunk (cheolsoo)

PIG-3155: TestTypeCheckingValidatorNewLP.testSortWithInnerPlan3 fails in trunk (cheolsoo)

PIG-3154: TestPackage.testOperator fails in trunk (dreambird via cheolsoo)

PIG-3168: TestMultiQueryBasic.testMultiQueryWithSplitInMapAndMultiMerge fails in trunk (cheolsoo)

PIG-3137: Fix Piggybank test to not using /tmp dir (dreambird via cheolsoo)

PIG-3149: e2e build.xml still refers to jython 2.5.0 jar even though it's replaced by jython standalone 2.5.2 jar (cheolsoo)

PIG-2266: Bug with input file joining optimization in Pig (jadler via cheolsoo)

PIG-2645: PigSplit does not handle the case where SerializationFactory returns null (shami via gates)

PIG-3031: Update Pig to use a newer version of joda-time (zjshen via cheolsoo)

PIG-3071: Update hcatalog jar and path to hbase storage handler jar in pig script (arpitgupta via cheolsoo)
